# aosd

./: CHANGELOG.md  LICENSE  README.md  aosd.cabal  default.nix  shell.nix
app/: Main.hs
