cabal-version:      3.4
name:               aosd
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Alexander Foremny
maintainer:         aforemny@posteo.de
-- copyright:
category:           Graphics
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

executable aosd
    ghc-options:      -Wall -threaded
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
      base ^>=4.16.4.0,
      X11,
      stm,
      optparse-applicative,
      X11-xshape
    hs-source-dirs:   app
    default-language: GHC2021
